fix: responsiveness on mobile and tablet

--- a/src/app/pages/country-detail/country-detail.component.scss
+++ b/src/app/pages/country-detail/country-detail.component.scss
@@ -33,19 +33,34 @@
 }
 
 .details-container {
-  width: 100vw;
+  width: 1200px;
   height: 100vh;
-  padding: 0 20px;
+  margin-inline: auto;
+  padding: 20px;
+  overflow: hidden;
 
+  @include breakpoint(1200px) {
+    width: 100%;
+    min-height: 100vh;
+  }
+
+  @include breakpoint(420px) {
+    width: 100%;
+    min-height: 100vh;
+  }
   .back {
     width: 100%;
     display: flex;
     justify-content: flex-start;
     margin-bottom: 20px;
 
+    @include breakpoint(1000px) {
+      width: 100%;
+    }
+
     button {
       background-color: $card-bg;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
       width: 136px;
       border: none;
       outline: none;
@@ -60,7 +75,14 @@
   .details {
     width: 100%;
     display: flex;
-    gap: 20px;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 7%;
+
+    @include breakpoint(1000px) {
+      width: 100%;
+      flex-direction: column;
+    }
 
     .borders-wrapper {
       display: flex;
@@ -68,33 +90,83 @@
       margin-top: 20px;
       align-items: center;
 
+      @include breakpoint(760px) {
+        width: 100%;
+        flex-direction: column;
+
+        strong {
+          width: 100%;
+        }
+      }
+
       .borders {
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
 
+        @include breakpoint(760px) {
+          width: 100%;
+        }
+
         .border {
           min-width: 96px;
           text-align: center;
           padding: 5px;
-          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          border-radius: 5px;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
       }
     }
     .flag {
       width: 560px;
       height: 401px;
+      // @include breakpoint(1024px) {
+      //   width: 400px;
+      // }
+
+      @include breakpoint(760px) {
+        width: 100%;
+      }
+
+      @include breakpoint(420px) {
+        height: 229px;
+        width: 100%;
+      }
 
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
     .right {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: stretch;
+      gap: 20px;
+      margin-top: 20px;
+
+      @include breakpoint(760px) {
+        width: 100%;
+      }
+
+      span {
+        font-weight: bold;
+      }
       .info {
         display: flex;
         gap: 40px;
+
+        @include breakpoint(760px) {
+          flex-direction: column;
+        }
+
+        .left {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+        }
       }
     }
   }
