--- a/src/app/pages/country-list/country-list.component.scss
+++ b/src/app/pages/country-list/country-list.component.scss
@@ -34,11 +34,33 @@
 
 .country-list-container {
   width: 1200px;
+  padding: 0 20px;
+  overflow: hidden;
+
+  @include breakpoint(1024px) {
+    width: 100%;
+  }
+  @include breakpoint(1000px) {
+    width: 100%;
+  }
+  @include breakpoint(760px) {
+    width: 100%;
+  }
+
+  @include breakpoint(400px) {
+    width: 100%;
+  }
 
   .filter-section {
     width: 100%;
     @include flex(row, space-between, center);
     margin-bottom: 40px;
+
+    @include breakpoint(760px) {
+      flex-direction: column;
+      gap: 20px;
+      align-items: stretch;
+    }
 
     .search-bar {
       @include flex(row, flex-start, center, 10px);
@@ -46,6 +68,11 @@
       height: 56px;
       background: $card-bg;
       padding: 20px;
+
+      @include breakpoint(760px) {
+        width: 100%;
+      }
+
       input {
         width: 100%;
         height: 100%;
@@ -61,7 +88,8 @@
       min-height: 56px;
 
       select {
-        width: 100%;
+        width: 200px;
+        height: 56px;
         padding: 0.6rem 1rem;
         border: none;
         outline: none;
@@ -71,6 +99,7 @@
         }
       }
       option {
+        width: 200px;
         outline: none;
         background-color: transparent;
       }
@@ -78,7 +107,10 @@
   }
 
   .country-list {
-    @include gridLayout(4);
-    gap: 40px;
+    // @include gridLayout(4);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
   }
 }
